Prevent resource menu from overlapping other items

--- a/workbench/css/workbench.css
+++ b/workbench/css/workbench.css
@@ -175,7 +175,7 @@ div.metadata-table {
   width: 97%;
   display: inline-block;
   overflow: hidden;
-  margin-top: 40px;
+  margin-top: 42px;
 }
 #res_table td.highlight {
   background-color: whitesmoke !important;
